--- a/globo-interview-project-ui/package.json
+++ b/globo-interview-project-ui/package.json
@@ -1,44 +1,51 @@
 {
-  "name": "globo-interview-project",
-  "description": "Project that shows graphs about cpu usage, memory usage and AWS cluster status",
-  "version": "1.0.0",
-  "author": "samueljoshua@live.com",
-  "license": "]",
+  "name": "globo-interview-project-ui",
+  "version": "0.1.0",
+  "author": " Samuel Joshua de Oliveira",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "chart.js": "^2.9.4",
-    "vue": "^2.5.11",
-    "vue-burger-menu": "^2.0.5",
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
-    "vuetify": "^2.5.8"
+    "vue-cookies": "^1.7.4",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.5.1",
+    "vuex-persistedstate": "^4.0.0-beta.1"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "^4.5.6",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 8"
-  ],
-  "devDependencies": {
-    "axios": "^0.21.4",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "deepmerge": "^4.2.2",
-    "file-loader": "^1.1.4",
-    "sass": "^1.32.13",
-    "sass-loader": "^7.3.1",
-    "vue-loader": "^13.0.5",
-    "vue-router": "^3.5.2",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
-  }
+    "not dead"
+  ]
 }
