--- a/globo-interview-project-ui/package.json
+++ b/globo-interview-project-ui/package.json
@@ -16,17 +16,22 @@
     "vue-chartjs": "^3.5.1",
     "vue-cookies": "^1.7.4",
     "vue-router": "^3.2.0",
+    "vuetify": "^2.5.8",
     "vuex": "^3.5.1",
     "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
+    "@nuxtjs/vuetify": "^1.12.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "^4.5.6",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.32.13",
+    "sass-loader": "^12.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
