--- a/globo-interview-project-service/package.json
+++ b/globo-interview-project-service/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "dev": "node index.js",
+    "production": "pm2 start index.js --name globo-interview-api",
     "swagger-autogen": "node swagger.js"
   },
   "dependencies": {
