--- a/globo-interview-project-service/package.json
+++ b/globo-interview-project-service/package.json
@@ -16,6 +16,7 @@
     "sequelize": "^6.6.5",
     "sqlite3": "^5.0.2",
     "swagger-autogen": "^2.6.3",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.4",
+    "tedious": "^12.2.0"
   }
 }
